# CMajor-FMOD-Wrapper

./: .gitignore  README.md
CMake/: CMakeLists.txt  FetchCmaj.cmake
CmajorWrapper/: CmajorWrapper.hpp  CmajorWrapper.inl  Cmajor_FMOD.cpp.in
RNBO-FMOD-Wrapper-Ref/CMake/: CMakeLists.txt  leak_fixer.py
RNBO-FMOD-Wrapper-Ref/RNBOWrapper/: RNBOWrapper.cpp  RNBOWrapper.hpp  RNBO_FMOD.cpp.in
Templates/: CMajorFMOD_Prompt.template
